--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "lang": "en",
-    "short_name": "ethayer.co",
-    "name": "ethayer.co - The personal site of Eric Thayer.",
-    "description": "Web Designer and Front-end Developer from Denver Colorado.",
+    "short_name": "Concordus Applications",
+    "name": "",
+    "description": "",
     "icons": [{
         "src": "/images/icons/icon-48.png",
         "sizes": "48x48",
