--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "lang": "en",
     "short_name": "Concordus",
-    "name": "",
+    "name": "Concordus",
     "description": "",
     "icons": [{
         "src": "/images/icons/icon-48.png",
