--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ title = "Concordus Applications"
 
 [[menu.main]]
     name = "Products"
-    url = "#"
+    url = "#0"
     weight = 2
     identifier = "products-dropdown"
 [[menu.main]]
@@ -45,7 +45,7 @@ title = "Concordus Applications"
 
 [[menu.main]]
     name = "Services"
-    url = "#"
+    url = "#0"
     weight = 3
     identifier = "services-dropdown"
 [[menu.main]]
@@ -88,7 +88,7 @@ title = "Concordus Applications"
 
 [[menu.main]]
     name = "Analytics"
-    url = "#"
+    url = "#0"
     weight = 4
     identifier = "analytics-dropdown"
 [[menu.main]]
